# fastapi-tortoise-user-crud-demo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  aerich.ini  backend.dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  utils.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  users.py
app/config/: __init__.py  base.py  local.py  production.py
app/db/: __init__.py  exceptions.py
app/db/models/: user.py
app/schemas/: __init__.py  base.py  users.py
app/tests/integration/: conftest.py  test_users_endpoints.py
